Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
 
-<p>I am going to implement the selective search algorithm as described in <a href="https://ivi.fnwi.uva.nl/isis/publications/2013/UijlingsIJCV2013/UijlingsIJCV2013.pdf">this paper </a></p>
+<p>I am going to implement the selective search algorithm for object recognition as described in <a href="https://ivi.fnwi.uva.nl/isis/publications/2013/UijlingsIJCV2013/UijlingsIJCV2013.pdf">this paper.</a></p>
 
 <h3>
 <a id="background" class="anchor" href="#background" aria-hidden="true"><span class="octicon octicon-link"></span></a>Background</h3>
