Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@ In hierarchical approach, there is potential for parallelism here since we can s
 <h3>
 <a id="proposed-schedule" class="anchor" href="#proposed-schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proposed Schedule</h3>
 
-<p>4/2 - 4/9 : Study papers and implement sequential algorithm 
-4/9 - 4/16 (Checkpoint): Decide on platform and begin parallel implementation 
-4/16 - 4/23: Continue parallel implementation
-4/23 - 4/30: Finish parallel implementation and establish evaluation metrics
-4/30 - 5/7: Perform evaluations and complete final write up
-5/7 - 5/10: Buffer</p>
+<ul>
+<li>4/2 - 4/9: Study papers and implement sequential algorithm </li>
+<li>4/9 - 4/16 (Checkpoint): Decide on platform and begin parallel implementation </li>
+<li>4/16 - 4/23: Continue parallel implementation</li>
+<li>4/23 - 4/30: Finish parallel implementation and establish evaluation metrics</li>
+<li>4/30 - 5/7: Perform evaluations and complete final write up</li>
+<li>5/7 - 5/10: Buffer</li>
+</ul>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
