Added test link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       </header>
       <section>
         <h3>
+
+<a href = "checkpoint.html">Checkpoint Page</a> <br>
+
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
 
 <p>I will implement a parallel version of the CKY algorithm used for parsing natural language.</p>
