--- a/checkpoint.html
+++ b/checkpoint.html
@@ -1,1 +1,47 @@
-This is a test
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Parallel CKY Algorithm for Natural Language Parsing by orahman12</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Parallel CKY Algorithm for Natural Language Parsing</h1>
+        <p>by Omar Rahman</p>
+
+
+        <p class="view"><a href="https://github.com/orahman12">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h3>
+
+<a href = "index.html">Home Page</a> <br>
+
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
+
+<p>I will implement a parallel version of the CKY algorithm used for parsing natural language.</p>
+
+<h3>
+<a id="progress" class="anchor" href="#progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress</h3>
+
+<p>So far, I have adapted a barebones serial implementation of the CKY algorithm to be able to read in the Berkeley grammar and lexicon. I have also created a simple testing harness that I will evolve as I continue development.</p>
+
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
