--- a/checkpoint.html
+++ b/checkpoint.html
@@ -26,7 +26,8 @@
         <h3>
 
 <a href = "index.html">Home Page</a> <br>
-<a href = "index.html">Proposal Page</a> <br>
+<br>
+<a href = "proposal.html">Proposal Page</a> <br>
 <br>
 
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
