--- a/proposal.html
+++ b/proposal.html
@@ -25,7 +25,8 @@
       <section>
         <h3>
 
-<a href = "checkpoint.html">Home Page</a> <br>
+<a href = "index.html">Home Page</a> <br>
+<br>
 <a href = "checkpoint.html">Checkpoint Page</a> <br>
 <br>
 
