Finishing up checkpoint.html

--- a/checkpoint.html
+++ b/checkpoint.html
@@ -39,6 +39,12 @@
 
 <p>So far, I have adapted a barebones serial implementation of the CKY algorithm to be able to read in the Berkeley grammar and lexicon. I have also created a simple testing harness that I will evolve as I continue development.</p>
 
+<a id="issues" class="anchor" href="#issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues</h3>
+<p>Right now, everything seems to be on track for completing the project on time. However, through further research I have discovered that the results from the paper that I intend to replicate have been greatly improved upon using more advanced techniques both in natural language processing and parallel implementations. These techniques, however, require more in depth knowledge that may not be feasible for me to implement. Despite this, I believe the original problem of parallelizing the CKY algorithm is still very interesting from a parallelization perspective, and so I will continue with it. <p>
+
+<a id="plan" class="anchor" href="#plan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plan</h3>
+<p>The plan is to continue as scheduled. I will implement the parallel version of the CKY algorithm using CUDA and will make tweaks as necessary. I hope to complete this parallel implementation by 4/27 and perform analyses and benchmarks subsequently. At the parallelism competition, I hope to present graphs of speedups and screenshots of the output of the program, though that may not be very interesting. </p>
+
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
