--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       </header>
       <section>
         <h3>
-            
-            <a href = "proposal.html">Proposal Page</a> <br>
+            <a href="final_writeup.pdf">Final Writeup</a><br>
             <br>
-            <a href = "checkpoint.html">Checkpoint Page</a> <br>
+            <a href="proposal.html">Proposal Page</a><br>
+            <br>
+            <a href="checkpoint.html">Checkpoint Page</a><br>
             <br>
 
       </section>
